--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ activityCompose = "1.10.1"
 composeBom = "2024.09.00"
 room = "2.7.2"
 journeyapps = "4.3.0"
+retrofit = "2.9.0"
+navigation = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -31,6 +33,9 @@ room-runtime =  {group = "androidx.room", name = "room-runtime", version.ref = "
 room-compiler = {group = "androidx.room", name = "room-compiler", version.ref = "room"}
 room-ktx = {group = "androidx.room", name = "room-ktx", version.ref = "room"}
 zxing-android-embedded = {group = "com.journeyapps", name = "zxing-android-embedded", version.ref = "journeyapps"}
+retrofit-retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
+retrofit-converter-scalars = {group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofit"}
+androidx-navigation-compose = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
